--- a/News(oc)/News(oc)/Base.lproj/Main.storyboard
+++ b/News(oc)/News(oc)/Base.lproj/Main.storyboard
@@ -99,10 +99,10 @@
                         <constraints>
                             <constraint firstItem="ZgS-gh-QuY" firstAttribute="leading" secondItem="pXn-g5-fTz" secondAttribute="leading" id="8x9-l6-KYS"/>
                             <constraint firstItem="hCr-mZ-PoE" firstAttribute="leading" secondItem="pXn-g5-fTz" secondAttribute="leading" id="Esp-r7-0gk"/>
-                            <constraint firstItem="Gvl-F7-xyd" firstAttribute="top" secondItem="ZgS-gh-QuY" secondAttribute="bottom" id="cNV-FF-osG"/>
                             <constraint firstAttribute="trailing" secondItem="hCr-mZ-PoE" secondAttribute="trailing" id="kee-FB-oj9"/>
                             <constraint firstItem="hCr-mZ-PoE" firstAttribute="top" secondItem="oS1-8U-ZxP" secondAttribute="bottom" id="qM7-IO-u0M"/>
                             <constraint firstItem="ZgS-gh-QuY" firstAttribute="top" secondItem="hCr-mZ-PoE" secondAttribute="bottom" id="sRR-Ru-7PV"/>
+                            <constraint firstItem="Gvl-F7-xyd" firstAttribute="top" secondItem="ZgS-gh-QuY" secondAttribute="bottom" id="vpG-U4-pAv"/>
                             <constraint firstAttribute="trailing" secondItem="ZgS-gh-QuY" secondAttribute="trailing" id="wMn-dS-Pca"/>
                         </constraints>
                     </view>
